# ros2_ws

./: .gitignore
src/tictactoe_interfaces/: CMakeLists.txt  package.xml
src/tictactoe_interfaces/action/: MovePiece.action  PlacePiece.action
src/tictactoe_interfaces/srv/: PlacePiece.srv
src/tictactoe_robot/: package.xml  positions.json  setup.cfg  setup.py
src/tictactoe_robot/launch/: tictactoe.launch.py
src/tictactoe_robot/tictactoe_robot/: game_node.py  robot_controller.py  tictactoe_game.py
src/tictactoe_robot/tictactoe_robot/gui/: board_widget.py  main_window.py  setup_widget.py  test_setup_widget.py
src/tictactoe_vision/: package.xml  setup.cfg  setup.py
src/tictactoe_vision/tictactoe_vision/: best.pt  bridge_node.py  vision.py
